added additional text to lecture background material

--- a/week1/tutorial1.ipynb
+++ b/week1/tutorial1.ipynb
@@ -21,17 +21,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h2>Tutorial outline<span class=\"tocSkip\"></span></h2>\n",
-    "<hr>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#1.-Introduction\" data-toc-modified-id=\"1.-Introduction-1\">1. Introduction</a></span></li><li><span><a href=\"#2.-Basic-Python-Data-Types\" data-toc-modified-id=\"2.-Basic-Python-Data-Types-2\">2. Basic Python Data Types</a></span></li><li><span><a href=\"#3.-Lists-and-Tuples\" data-toc-modified-id=\"3.-Lists-and-Tuples-3\">3. Lists and Tuples</a></span></li><li><span><a href=\"#4.-String-Methods\" data-toc-modified-id=\"4.-String-Methods-4\">4. String Methods</a></span></li><li><span><a href=\"#5.-Dictionaries\" data-toc-modified-id=\"5.-Dictionaries-5\">5. Dictionaries</a></span></li><li><span><a href=\"#6.-Empties\" data-toc-modified-id=\"6.-Empties-6\">6. Empties</a></span></li><li><span><a href=\"#7.-Conditionals\" data-toc-modified-id=\"7.-Conditionals-7\">7. Conditionals</a></span></li></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Learning Objectives\n",
@@ -50,6 +39,17 @@
     "- Write a conditional statement with `if`, `elif` and `else`.\n",
     "- Identify code blocks by levels of indentation.\n",
     "- Explain the difference between mutable objects like a `list` and immutable objects like a `tuple`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h2>Tutorial outline<span class=\"tocSkip\"></span></h2>\n",
+    "<hr>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#1.-Introduction\" data-toc-modified-id=\"1.-Introduction-1\">1. Introduction</a></span></li><li><span><a href=\"#2.-Basic-Python-Data-Types\" data-toc-modified-id=\"2.-Basic-Python-Data-Types-2\">2. Basic Python Data Types</a></span></li><li><span><a href=\"#3.-Lists-and-Tuples\" data-toc-modified-id=\"3.-Lists-and-Tuples-3\">3. Lists and Tuples</a></span></li><li><span><a href=\"#4.-String-Methods\" data-toc-modified-id=\"4.-String-Methods-4\">4. String Methods</a></span></li><li><span><a href=\"#5.-Dictionaries\" data-toc-modified-id=\"5.-Dictionaries-5\">5. Dictionaries</a></span></li><li><span><a href=\"#6.-Empties\" data-toc-modified-id=\"6.-Empties-6\">6. Empties</a></span></li><li><span><a href=\"#7.-Conditionals\" data-toc-modified-id=\"7.-Conditionals-7\">7. Conditionals</a></span></li></ul></div>"
    ]
   },
   {
@@ -3497,7 +3497,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('py310')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
