deploy: 21bbe59635e42bf435d20d6e3ce1e2174c90a0da

--- a/_sources/week2/lecture.ipynb
+++ b/_sources/week2/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ed0766c5",
+   "id": "7ce5a18c",
    "metadata": {},
    "source": [
     "# Lecture: Introduction to Random Forests\n",
@@ -16,11 +16,13 @@
     "- Know how to interpret your results.\n",
     "`````\n",
     "\n",
-    "## Data analysis\n",
+    "## Linear regression\n",
+    "Linear regression is used to identify the relationship between a dependent variable and one or more independent variables and is typically leveraged to make predictions about future outcomes. When there is only one independent variable and one dependent variable, it is known as simple linear regression. As the number of independent variables increases, it is referred to as multiple linear regression. For each type of linear regression, it seeks to plot a line of best fit, which is calculated through the method of least squares. However, unlike other regression models, this line is straight when plotted on a graph.\n",
     "\n",
+    "## Logistic regression\n",
+    "While linear regression is leveraged when dependent variables are continuous, logistical regression is selected when the dependent variable is categorical, meaning they have binary outputs, such as \"true\" and \"false\" or \"yes\" and \"no.\" While both regression models seek to understand relationships between data inputs, logistic regression is mainly used to solve binary classification problems, such as spam identification.\n",
     "\n",
-    "\n",
-    "## Regression analysis"
+    "## Random Forests"
    ]
   }
  ],
