--- a/_sources/week3/lecture.ipynb
+++ b/_sources/week3/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e56b34d5",
+   "id": "5d75c728",
    "metadata": {},
    "source": [
     "# Lecture: Introduction to Artificial Neural Networks\n",
@@ -11,17 +11,10 @@
     "\n",
     "`````{admonition} Learning objectives week 3\n",
     ":class: important\n",
-    "- Gain a basic understanding of machine learning and its most important concepts.\n",
-    "- Understand the difference between supervised and unsupervised learning.\n",
-    "- Understand and know how you can apply a machine learning model in Python. \n",
+    "- Understand the concept of Artificial neural networks.\n",
+    "- Understand and know how you can apply an artificial neural network model in Python. \n",
     "- Know how to validate and interpret your results.\n",
     "`````\n",
-    "\n",
-    "## What is machine learning?\n",
-    "\n",
-    "\n",
-    "## Random forest regressions\n",
-    "\n",
     "\n",
     "## Artificial neural networks\n",
     "\n",
