--- a/_sources/week6/lecture.ipynb
+++ b/_sources/week6/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1459d23c",
+   "id": "bb39fa51",
    "metadata": {},
    "source": [
     "# Lecture: Social Media and Natural Language Processing (NLP)\n",
@@ -13,6 +13,7 @@
     ":class: important\n",
     "- Understand the concept of Nature Language Processing\n",
     "- Gain a basic understand of how social media data can be explored and used.\n",
+    "- Know how you can access Twitter data and use it in Python. \n",
     "`````\n",
     "\n",
     "## Natural Language Processing\n",
@@ -86,9 +87,7 @@
     "Now, imagine all the English words in the vocabulary with all their different fixations at the end of them. To store them all would require a huge database containing many words that actually have the same meaning. This is solved by focusing only on a word’s stem. Popular algorithms for stemming include the Porter stemming algorithm from 1979, which still works well.\n",
     "\n",
     " \n",
-    "\n",
     "**TEXT SEGMENTATION** \n",
-    "\n",
     "Text segmentation in natural language processing is the process of transforming text into meaningful units like words, sentences, different topics, the underlying intent and more. Mostly, the text is segmented into its component words, which can be a difficult task, depending on the language. This is again due to the complexity of human language. For example, it works relatively well in English to separate words by spaces, except for words like “icebox” that belong together but are separated by a space. The problem is that people sometimes also write it as “ice-box.”\n",
     "\n",
     "\n",
@@ -118,7 +117,7 @@
     "This explananation is strongly based upon the work of [others](https://builtin.com/data-science/introduction-nlp/) \n",
     "```\n",
     "\n",
-    "## Social Media data"
+    "## Access to Twitter Data"
    ]
   }
  ],
