--- a/_sources/week4/lecture.ipynb
+++ b/_sources/week4/lecture.ipynb
@@ -2,19 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56592aec",
+   "id": "eaf34218",
    "metadata": {},
    "source": [
     "# Lecture: Big Data in the public domain\n",
     "\n",
-    "This week we will focus on how we can use the various techniques we have learned over the past couple of weeks (e.g. data analysis and machine learning) to explore how the future may change.\n",
+    "This week we will focus on the large amount of data available in the public domain that we can utilize within our research in sustainability sciences.\n",
     "\n",
     "`````{admonition} Learning objectives week 5\n",
     ":class: important\n",
-    "- Understand the different drivers of future changes.\n",
-    "- Gain a basic understanding of climate forecasting.\n",
-    "- know how to translate future socioeconomic scenarios into spatially-explicit future changes of land-use\n",
-    "`````"
+    "- Understand what type of data is available.\n",
+    "- Understand how licensing works.\n",
+    "- Know how to access OpenStreetMap and perform basic spatial analysis on this data.\n",
+    "- Know how to combine different open-access spatial datasets to perform a natural hazards risk assessment. \n",
+    "`````\n",
+    "\n",
+    "## Overview of data sources\n",
+    "\n",
+    "\n",
+    "## Licencing of data in the public domain"
    ]
   }
  ],
