--- a/_sources/week4/tutorial2.ipynb
+++ b/_sources/week4/tutorial2.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Tutorial 2: Natural Hazard Risk Assessment"
    ]
@@ -11,16 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Tutorial Outline<span class=\"tocSkip\"></span></h2>\n",
-    "<hr>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\">\n",
-    "<li><span><a href=\"#1.-Introducing the packages\" data-toc-modified-id=\"1.-Introducing-the-packages-2\">1. Introducing the packages</a></span></li>\n",
-    "<li><span><a href=\"#2.-\" data-toc-modified-id=\"2.-Extracting-landuse-information-3\">2. </a></span></li>\n",
-    "<li><span><a href=\"#3.-\" data-toc-modified-id=\"3.-Visualize-Rasterize-4\">3. </a></span></li>\n",
-    "<li><span><a href=\"#4.-\" data-toc-modified-id=\"4.-Extracting-buildings-5\">4. </a></span></li>\n",
-    "<li><span><a href=\"#5.-\" data-toc-modified-id=\"5.-Analyze-buildings-6\">5. </a></span></li>\n",
-    "<li><span><a href=\"#6.-\" data-toc-modified-id=\"4.-Extracting-roads-5\">6. </a></span></li>\n",
-    "<li><span><a href=\"#7.-\" data-toc-modified-id=\"5.-Plot-routes-6\">7. </a></span></li></ul></div>"
+    "In the second tutorial of this week, we are going to explore publicly available hazard data, and use OpenStreetMap to estimate the potential damage of natural hazards to the built environment."
    ]
   },
   {
@@ -35,12 +28,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- .\n",
-    "- .\n",
-    "- .\n",
-    "- .\n",
-    "- .\n",
-    "- ."
+    "- To know where to find publicly available natural hazard data and how to download them.\n",
+    "- To be able to open and visualize this hazard data.\n",
+    "- To understand the basic approach of a natural hazard risk assessment.\n",
+    "- To be able to use the `DamageScanner` to do a damage assessment.\n",
+    "- To interpret and visualize the damage estimates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Tutorial Outline<span class=\"tocSkip\"></span></h2>\n",
+    "<hr>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\">\n",
+    "<li><span><a href=\"#1.-Introducing the packages\" data-toc-modified-id=\"1.-Introducing-the-packages-2\">1. Introducing the packages</a></span></li>\n",
+    "<li><span><a href=\"#2.-Downloading and accessing natural hazard data\" data-toc-modified-id=\"2.-Extracting-hazard-data-3\">2. Downloading and accessing natural hazard data</a></span></li>\n",
+    "<li><span><a href=\"#3.-Explore the natural hazard data for your area of interest\" data-toc-modified-id=\"3.-Explore-hazard-data-4\">3. Explore the natural hazard data for your area of interest</a></span></li>\n",
+    "<li><span><a href=\"#4.-Perform a damage assessment for your area of interest\" data-toc-modified-id=\"4.-Extracting-buildings-5\">4. Perform a damage assessment for your area of interest</a></span></li>\n",
+    "<li><span><a href=\"#5.-Interpret and visualize your damage estimates\" data-toc-modified-id=\"5.-Analyze-buildings-6\">5. Interpret and visualize your damage estimates</a></span></li></ul></div>"
    ]
   },
   {
@@ -57,14 +63,108 @@
    "source": [
     "Within this tutorial, we are going to make use of the following packages: \n",
     "\n",
+    "[**GeoPandas**](https://geopandas.org/) is a Python packagee that extends the datatypes used by pandas to allow spatial operations on geometric types.\n",
     "\n",
+    "[**OSMnx**](https://osmnx.readthedocs.io/) is a Python package that lets you download geospatial data from OpenStreetMap and model, project, visualize, and analyze real-world street networks and any other geospatial geometries. You can download and model walkable, drivable, or bikeable urban networks with a single line of Python code then easily analyze and visualize them. You can just as easily download and work with other infrastructure types, amenities/points of interest, building footprints, elevation data, street bearings/orientations, and speed/travel time.\n",
     "\n",
-    "*We will first need to install these packages in the cell below. Uncomment them to make sure we can pip install them*"
+    "[**xarray**](https://docs.xarray.dev/) is a Python package that allows for easy and efficient use of multi-dimensional arrays.\n",
+    "\n",
+    "[**Matplotlib**](https://matplotlib.org/) is a comprehensive Python package for creating static, animated, and interactive visualizations in Python. Matplotlib makes easy things easy and hard things possible.\n",
+    "\n",
+    "*We will first need to install the missing packages in the cell below. Uncomment them to make sure we can pip install them*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#!pip install osmnx\n",
+    "#!pip install geopandas\n",
+    "#!pip install contextily"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And we will import these packages in the cell below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import rcParams, cycler\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## 2. Downloading and accessing natural hazard data\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Explore the natural hazard data for your area of interest\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## 4. Perform a damage assessment for your area of interest\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## 5. Interpret and visualize your damage estimates\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -72,46 +172,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from matplotlib import rcParams, cycler\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "plt.ion()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fixing random state for reproducibility\n",
-    "np.random.seed(19680801)\n",
-    "\n",
-    "N = 10\n",
-    "data = [np.logspace(0, 1, 100) + np.random.randn(100) + ii for ii in range(N)]\n",
-    "data = np.array(data).T\n",
-    "cmap = plt.cm.coolwarm\n",
-    "rcParams['axes.prop_cycle'] = cycler(color=cmap(np.linspace(0, 1, N)))\n",
-    "\n",
-    "\n",
-    "from matplotlib.lines import Line2D\n",
-    "custom_lines = [Line2D([0], [0], color=cmap(0.), lw=4),\n",
-    "                Line2D([0], [0], color=cmap(.5), lw=4),\n",
-    "                Line2D([0], [0], color=cmap(1.), lw=4)]\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(10, 5))\n",
-    "lines = ax.plot(data)\n",
-    "ax.legend(custom_lines, ['Cold', 'Medium', 'Hot']);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There is a lot more that you can do with outputs (such as including interactive outputs)\n",
-    "with your book. For more information about this, see [the Jupyter Book documentation](https://jupyterbook.org)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
