--- a/_sources/week3/lecture.ipynb
+++ b/_sources/week3/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d75c728",
+   "id": "5ac75fe6",
    "metadata": {},
    "source": [
     "# Lecture: Introduction to Artificial Neural Networks\n",
@@ -17,6 +17,9 @@
     "`````\n",
     "\n",
     "## Artificial neural networks\n",
+    "Neural networks are a commonly used, specific class of machine learning algorithms. Artificial neural networks are modeled on the human brain, in which thousands or millions of processing nodes are interconnected and organized into layers.\n",
+    "\n",
+    "In an artificial neural network, cells, or nodes, are connected, with each cell processing inputs and producing an output that is sent to other neurons. Labeled data moves through the nodes, or cells, with each cell performing a different function. In a neural network trained to identify whether a picture contains a cat or not, the different nodes would assess the information and arrive at an output that indicates whether a picture features a cat.\n",
     "\n",
     "\n",
     "## Model validation"
