add gifs and first version of tut2week4

--- a/week4/tutorial2.ipynb
+++ b/week4/tutorial2.ipynb
@@ -13,7 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the second tutorial of this week, we are going to explore publicly available hazard data, and use OpenStreetMap to estimate the potential damage of natural hazards to the built environment."
+    "In the second tutorial of this week, we are going to use publicly available hazard data and exposure data to do a risk assessment for an area of choice within Europe. More specifically we will look at damage due to wind storms and flooding. \n",
+    "\n",
+    "We will use both Copernicus Land Cover data and OpenStreetMap to estimate the potential damage of natural hazards to the built environment. We will use Copernicus Land Cover data to estimate the damage to specific land-uses, whereas we will use OpenStreetMap to assess the potential damage to the road system."
    ]
   },
   {
@@ -28,8 +30,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- To know where to find publicly available natural hazard data and how to download them.\n",
+    "- To know how to download data from the Copernicus Climate Data Store using the `cdsapi` and access it through Python.\n",
     "- To be able to open and visualize this hazard data.\n",
+    "- To know how to access and open information from the Copernicus Land Monitoring System. Specifically the Corine Land Cover data.\n",
     "- To understand the basic approach of a natural hazard risk assessment.\n",
     "- To be able to use the `DamageScanner` to do a damage assessment.\n",
     "- To interpret and visualize the damage estimates."
@@ -45,8 +48,10 @@
     "<li><span><a href=\"#1.-Introducing the packages\" data-toc-modified-id=\"1.-Introducing-the-packages-2\">1. Introducing the packages</a></span></li>\n",
     "<li><span><a href=\"#2.-Downloading and accessing natural hazard data\" data-toc-modified-id=\"2.-Extracting-hazard-data-3\">2. Downloading and accessing natural hazard data</a></span></li>\n",
     "<li><span><a href=\"#3.-Explore the natural hazard data for your area of interest\" data-toc-modified-id=\"3.-Explore-hazard-data-4\">3. Explore the natural hazard data for your area of interest</a></span></li>\n",
-    "<li><span><a href=\"#4.-Perform a damage assessment for your area of interest\" data-toc-modified-id=\"4.-Extracting-buildings-5\">4. Perform a damage assessment for your area of interest</a></span></li>\n",
-    "<li><span><a href=\"#5.-Interpret and visualize your damage estimates\" data-toc-modified-id=\"5.-Analyze-buildings-6\">5. Interpret and visualize your damage estimates</a></span></li></ul></div>"
+    "<li><span><a href=\"#4.-Downloading and accessing Corine Land Cover\" data-toc-modified-id=\"4.-Extracting-CLC-data-3\">4. Downloading and accessing Corine Land Cover</a></span></li>    \n",
+    "<li><span><a href=\"#5.-Perform a damage assessment for your area of interest using Coring Land Cover\" data-toc-modified-id=\"5.-Damage-CLC-5\">5. Perform a damage assessment for your area of interest using Coring Land Cover</a></span></li>\n",
+    "<li><span><a href=\"#5.-Perform a damage assessment for your area of interest using OpenStreetMap\" data-toc-modified-id=\"5.-Damage-OSM-5\">6. Perform a damage assessment for your area of interest using OpenStreetMap</a></span></li>    \n",
+    "<li><span><a href=\"#7.-Interpret and visualize your damage estimates\" data-toc-modified-id=\"5.-Analyze-buildings-6\">7. Interpret and visualize your damage estimates</a></span></li></ul></div>"
    ]
   },
   {
@@ -75,8 +80,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "#!pip install osmnx\n",
     "#!pip install geopandas\n",
@@ -92,13 +99,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import rcParams, cycler\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import rasterio\n",
+    "import cdsapi\n",
+    "import xarray as xr\n",
+    "import pygeos \n",
+    "import geopandas as gpd\n",
+    "import osmnx as ox\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "\n",
+    "from zipfile import ZipFile\n",
+    "from matplotlib import rcParams, cycler\n",
+    "\n",
+    "import urllib3\n",
+    "urllib3.disable_warnings()"
    ]
   },
   {
@@ -112,11 +131,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are going to perform a damage assessment using both windstorm data and flood data for Europe.\n",
+    "\n",
+    "The windstorm data will be downloaded from the [Copernicus Climate Data Store](https://cds.climate.copernicus.eu/). As we have seen during the lecture, and as you can also see by browsing on this website, there is an awful lot of climate data available through this Data Store. As such, it is very valuable to understand how to access and download this information to use within an analysis. To keep things simple, we only download one dataset today: [A winter windstorm](https://cds.climate.copernicus.eu/cdsapp#!/dataset/sis-european-wind-storm-indicators?tab=overview). \n",
+    "\n",
+    "We will do so using an **API**, which is the acronym for application programming interface. It is a software intermediary that allows two applications to talk to each other. APIs are an accessible way to extract and share data within and across organizations. APIs are all around us. Every time you use a rideshare app, send a mobile payment, or change the thermostat temperature from your phone, you’re using an API.\n",
+    "\n",
+    "However, before we can access this **API**, we need to take a few steps. Most importantly, we need to register ourselves on the [Copernicus Climate Data Store](https://cds.climate.copernicus.eu/) portal. To do so, we need to register, as explained in the video clip below:\n",
+    "\n",
+    "<img src=\"../_static/images/CDS_registration.gif\" class=\"bg-primary mb-1\">\n",
+    "\n",
+    "Now, the next step is to access the API. You can now login on the website of the [Copernicus Climate Data Store](https://cds.climate.copernicus.eu/). After you login, you can click on your name in the top right corner of the webpage (next to the login button). On the personal page that has just opened, you will find your user ID (**uid**) and your personal **API**. You need to add those in the cell below to be able to download the windstorm.\n",
+    "\n",
+    "As you can see in the cell below, we download a specific windstorm that has occured on the fifth of December in 2013. This is storm Xaver. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-15 11:16:14,182 INFO Welcome to the CDS\n",
+      "2022-12-15 11:16:14,184 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/sis-european-wind-storm-indicators\n",
+      "2022-12-15 11:16:14,268 INFO Request is completed\n",
+      "2022-12-15 11:16:14,270 INFO Downloading https://download-0021.copernicus-climate.eu/cache-compute-0021/cache/data0/dataset-sis-european-wind-storm-indicators-3532b693-f64c-4771-8a00-4bfaace9c079.zip to Xaver.zip (14.4M)\n",
+      "2022-12-15 11:16:15,981 INFO Download rate 8.4M/s                                                                      \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Result(content_length=15087991,content_type=application/zip,location=https://download-0021.copernicus-climate.eu/cache-compute-0021/cache/data0/dataset-sis-european-wind-storm-indicators-3532b693-f64c-4771-8a00-4bfaace9c079.zip)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uid = 76974\n",
+    "apikey = 'ace04e3e-84e3-4d0c-ae9d-d248aca1f5e5'\n",
+    "\n",
+    "c = cdsapi.Client(key=f\"{uid}:{apikey}\", url=\"https://cds.climate.copernicus.eu/api/v2\")\n",
+    "\n",
+    "c.retrieve(\n",
+    "    'sis-european-wind-storm-indicators',\n",
+    "    {\n",
+    "        'variable': 'all',\n",
+    "        'format': 'zip',\n",
+    "        'product': 'windstorm_footprints',\n",
+    "        'year': '2013',\n",
+    "        'month': '12',\n",
+    "        'day': '05',\n",
+    "    },\n",
+    "    'Xaver.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with ZipFile('download.zip') as zf:\n",
+    "    for file in zf.namelist():\n",
+    "        with zf.open(file) as f:\n",
+    "            ds_disk = xr.open_dataset(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = ds_disk.to_dataframe()\n",
+    "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf = gpd.GeoDataFrame(df.reset_index().drop(columns=['y','x','longitude','latitude']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf = gdf.set_crs('epsg:4326')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "place_name = \"Nieuwland, Amersfoort, The Netherlands\"\n",
+    "area = ox.geocode_to_gdf(place_name)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,11 +254,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "zd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,7 +273,97 @@
     "tags": []
    },
    "source": [
-    "## 4. Perform a damage assessment for your area of interest\n",
+    "## 4. Download and access Copernicus Land Cover data\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, there is no API option to download the [Corine Land Cover](https://land.copernicus.eu/pan-european/corine-land-cover) data. We will have to download the data from the website first.\n",
+    "\n",
+    "To do so, we will first have to register ourselves again on the website. Please find in the video clip below how to register yourself on the website of the [Copernicus Land Monitoring Service](https://land.copernicus.eu/):\n",
+    "\n",
+    "<img src=\"../_static/images/CLMS_registration.gif\" class=\"bg-primary mb-1\">\n",
+    "\n",
+    "Now click on the Login button in the top right corner to login on the website. There are many interesting datasets on this website, but we just want to download the Corine Land Cover data, and specifically the latest version: [Corine Land Cover 2018](https://land.copernicus.eu/pan-european/corine-land-cover/clc2018?tab=download). To do so, please select the **Corine Land Cover - 100 meter**. Now click on the large green Download button. Your download should start any minute.\n",
+    "\n",
+    "Slightly annoying, the file you have downloaded is double zipped. Its slightly inconvenient to open this through Python and within Google Drive. So let's unzip it twice and store the data in a directory named `Data`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CLC_location = os.path.join('C:\\Data\\CLC\\DATA','U2018_CLC2018_V2020_20u1.tif')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Data\\\\CLC\\\\DATA\\\\U2018_CLC2018_V2020_20u1.tif'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CLC_location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-15 10:53:07,413 WARNING CPLE_AppDefined in The definition of projected CRS EPSG:3035 got from GeoTIFF keys is not the same as the one from the EPSG registry, which may cause issues during reprojection operations. Set GTIFF_SRS_SOURCE configuration option to EPSG to use official parameters (overriding the ones from GeoTIFF keys), or to GEOKEYS to use custom values from GeoTIFF keys and drop the EPSG code.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with rasterio.open(CLC_location) as src:\n",
+    "    landuse = src.read()[0, :, :]\n",
+    "    transform = src.transform"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## 5. Perform a damage assessment for your area of interest using Coring Land Cover\n",
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Perform a damage assessment for your area of interest using OpenStreetMap\n",
     "<hr>"
    ]
   },
@@ -156,7 +380,7 @@
     "tags": []
    },
    "source": [
-    "## 5. Interpret and visualize your damage estimates\n",
+    "## 7. Interpret and visualize your damage estimates\n",
     "<hr>"
    ]
   },
